[project]
name = "datanodes"
description = "Nodes for data processing pipelines"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Simon Pezold", email = "simon.pezold@unibas.ch" }
]
requires-python = ">=3.14"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "datanodes.__version__"}
